--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,8 +7,8 @@
     "args": [
     "${workspaceRoot}/src/TupleOperations.cpp",       
     "${workspaceRoot}/src/pid.cpp",
-    "${workspaceRoot}/src/Drone.cpp", 
-    "-std=c++11", "-lkrpc","-lprotobuf",
+    "${workspaceRoot}/src/Drone_PoleBalancing.cpp", 
+    "-std=c++11", "-lkrpc","-lprotobuf","-lcurses",
     "-Wall"],
     "showOutput": "always"
 }
