--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,8 +7,7 @@
     "args": [
     "${workspaceRoot}/src/TupleOperations.cpp",       
     "${workspaceRoot}/src/pid.cpp",
-    "${workspaceRoot}/src/Drone_VesselControl.cpp", 
-    "${workspaceRoot}/src/Main.cpp", 
+    "${workspaceRoot}/src/Allinone.cpp", 
     "-std=c++11", "-lkrpc","-lprotobuf","-lcurses",
     "-Wall"],
     "showOutput": "always"
