--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,14 +10,14 @@
             "stopAtEntry": false,
             "cwd": "${workspaceRoot}",
             "environment": [],
-            "externalConsole": false,
+            "externalConsole": true,
             "linux": {
                 "MIMode": "gdb",
                 "setupCommands": [
                     {
                         "description": "Enable pretty-printing for gdb",
                         "text": "-enable-pretty-printing",
-                        "ignoreFailures": true
+                        "ignoreFailures": true                  
                     }
                 ]
             }
