--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,10 +5,7 @@
     "command": "g++",
     "isShellCommand": true,
     "args": [
-    "${workspaceRoot}/src/TupleOperations.cpp",       
-    "${workspaceRoot}/src/pid.cpp",
-    "${workspaceRoot}/src/Drone_VesselControl.cpp",
-    "${workspaceRoot}/src/main_HugeDrone.cpp", 
+    "${workspaceRoot}/src/main_arm.cpp",       
     "-std=c++11", "-lkrpc","-lprotobuf","-lcurses",
     "-Wall"],
     "showOutput": "always"
