--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,6 +22,7 @@
         "cstdio": "cpp",
         "cwchar": "cpp",
         "cwctype": "cpp",
-        "initializer_list": "cpp"
+        "initializer_list": "cpp",
+        "*.ipp": "cpp"
     }
 }
