--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,6 +6,7 @@
     "isShellCommand": true,
     "args": [
     "${workspaceRoot}/src/IKSolver.cpp",       
+    "${workspaceRoot}/src/CalculateWheelTorque.cpp",       
     "${workspaceRoot}/src/TupleOperations.cpp",       
     "${workspaceRoot}/src/main_arm.cpp",       
     "-std=c++11", "-lkrpc","-lprotobuf","-lcurses",
