--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,7 +10,7 @@
     "${workspaceRoot}/src/CalculateWheelTorque.cpp",       
     "${workspaceRoot}/src/TupleOperations.cpp",       
     "${workspaceRoot}/src/main_arm.cpp",       
-    "-std=c++11", "-lkrpc","-lprotobuf","-lcurses",
+    "-std=c++11", "-lkrpc","-lprotobuf",
     "-Wall"],
     "showOutput": "always"
 }
