--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,6 +28,7 @@
         "dense": "cpp",
         "vector": "cpp",
         "core": "cpp",
-        "slist": "cpp"
+        "slist": "cpp",
+        "system_error": "cpp"
     }
 }
