--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,6 +6,7 @@
     "isShellCommand": true,
     "args": [
     "${workspaceRoot}/src/IKSolver.cpp",       
+    "${workspaceRoot}/src/pid.cpp",       
     "${workspaceRoot}/src/Arm_VesselControl.cpp",       
     "${workspaceRoot}/src/CalculateWheelTorque.cpp",       
     "${workspaceRoot}/src/TupleOperations.cpp",       
