optimize code to do a better job at not working

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,6 +29,10 @@
         "vector": "cpp",
         "core": "cpp",
         "slist": "cpp",
-        "system_error": "cpp"
+        "system_error": "cpp",
+        "array": "cpp",
+        "functional": "cpp",
+        "tuple": "cpp",
+        "utility": "cpp"
     }
 }
